use pre-compiled scipy and numpy from apt-get for CI testing

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,17 @@ python:
   - "3.3"
   - "2.7"
   - "2.6"
-
+virtualenv:
+  # This allows installing PyQt using apt-get and being able to import it.
+  system_site_packages: true
+before_install:
+  # On Python 2.7 we install PyQt4 and run the UI tests.
+  - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then source .travis_before_install; fi
 # install dependencies
 install:
   - pip install nose
-  - pip install numpy
-  - pip install scipy
+  # - pip install numpy
+  # - pip install scipy
   - pip install traits
   - pip install traitsui
   - pip install pyface
