try apt-get for enable instead of pip install

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ install:
   - pip install traits
   - pip install traitsui
   - pip install pyface
-  - pip install enable
+  # - pip install enable
   - pip install chaco
 # run tests
 script:
