--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ before_install:
 install:
   - pip install nose
   - pip install unittest2
-  - sudo apt-get python-numpy
-  - sudo apt-get python-scipy
-  - sudo apt-get python-enable
+  - sudo apt-get install python-numpy
+  - sudo apt-get install python-scipy
+  - sudo apt-get install python-enable
   # - pip install numpy
   # - pip install scipy
   - pip install traits
